--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "codespace": "ng serve --host=0.0.0.0 --public-host=jyothendravarma-turbo-memory-g4xx7wqw5jp2v57r-4200.preview.app.github.dev --configuration codespace" 
   },
   "private": true,
   "dependencies": {
