--- a/client/angular.json
+++ b/client/angular.json
@@ -83,13 +83,13 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "expense-tracker:build:production"
+              "buildTarget": "expense-tracker:build:production"
             },
             "development": {
-              "browserTarget": "expense-tracker:build:development"
+              "buildTarget": "expense-tracker:build:development"
             },
             "codespace": {
-              "browserTarget": "expense-tracker:build:codespace"
+              "buildTarget": "expense-tracker:build:codespace"
             }
           },
           "defaultConfiguration": "development"
@@ -97,7 +97,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "expense-tracker:build"
+            "buildTarget": "expense-tracker:build"
           }
         },
         "test": {
